<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.recom</groupId>
    <artifactId>recom-monorepo</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <modules>
        <module>services</module>
        <module>libs</module>
    </modules>

    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <springdoc-openapi.version>2.3.0</springdoc-openapi.version>

        <!-- LIBRARIES -->
        <commons-math3.version>3.6.1</commons-math3.version>

        <!-- CACHE -->
        <ehcache.version>3.10.8</ehcache.version>

        <!-- JIB CONTAINER BUILDER -->
        <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>

        <!-- JWT -->
        <nimbus-jose-jwt.version>9.37.3</nimbus-jose-jwt.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>